--- a/css/shared/card.css
+++ b/css/shared/card.css
@@ -1,5 +1,6 @@
 .card {
   height: 100%;
+  max-width: 100vw;
   width: 100%;
   position: relative;
   box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.5);
@@ -40,6 +41,7 @@
 .card__info--button {
   align-self: flex-end;
 }
+
 @media screen and (max-width: 1000px) {
   .card__info {
     height: 35%;
