--- a/css/shared/typography.css
+++ b/css/shared/typography.css
@@ -3,7 +3,6 @@ html {
 }
 
 body {
-  box-sizing: border-box;
   font-family: "Montserrat", sans-serif;
   font-weight: 400;
   color: #313131;
